# Aegis-Finance

./: .dockerignore  .env.example  .gitignore  ABSTRACT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NEGATIVE_RESULTS.md  README.md  REFERENCES.md  docker-compose.yml  pytest.ini  railway.json  ruff.toml  start-aegis.bat
backend/: BACKTEST_RESULTS.md  Dockerfile  cache.py  config.py  db.py  main.py  middleware.py  observability.py  requirements.txt
docs/: AEGIS_FULL_PICTURE_2026-07-12.md  BACKLOG.md  CANON.md  CAPABILITY_MATRIX.md  DATA_INTEGRITY.md  DATA_OPTIONS.md  DEEP_RESEARCH_2026-06-14_DECISION.md  DEEP_RESEARCH_FINDINGS.md  DEEP_RESEARCH_FINDINGS_ACADEMIC.md  DEEP_RESEARCH_FINDINGS_INDUSTRY.md  EVOLUTION_LOOP_PLAN.md  FACTOR_MENU.md  FACTOR_VALIDATION.md  FINDINGS.md  FRAGILITY_RESEARCH_2026-06-14.md  GAP_ANALYSIS.md  GAP_ANALYSIS_ENGINE_FRONTEND.md  IMPROVEMENT_BACKLOG.md  IMPROVEMENT_LOG.md  INTEGRITY_STATUS.md  INVESTOR_BRAIN_PLAN_2026-07-18.md  LOOKAHEAD_AUDIT.md  METHODOLOGY.md  P1-6-LANE-FRAMEWORK-PLAN.md  PROJECT_LANDSCAPE.md  PROPOSALS.md  REALITY_CHECK.md  REVIEW_VALIDATION_2026-06-14.md  ROADMAP_BRAIN_V2.md  ROADMAP_V4_2026-07-16.md  ROADMAP_V5_2026-07-18.md  SESSION_LOG.md  SESSION_PROMPT_NEXT.md  SOURCES_USED.md  STATE_OF_THE_REPO.md  STRESS_TEST_PORTFOLIOS.md  STRESS_TEST_RESULTS.md  TRACK_RECORD_POLICY.md  V1_STATE_AND_ROADMAP.md  V2_GOALS.md  (+11 more)
sdk/: README.md  pyproject.toml
sdk/aegis/: __init__.py  client.py
sdk/aegis/namespaces/: __init__.py  calendar.py  equity.py  macro.py  portfolio.py  risk.py  world.py
sdk/tests/: test_sdk.py
(+1957 files in other folders)
