[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-finance-sdk"
version = "0.1.0"
description = "Python SDK for the Aegis Finance API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aegis Finance" }]
keywords = ["finance", "quant", "portfolio", "monte-carlo", "risk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Investment",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/Murathan/aegis-finance"

[tool.setuptools.packages.find]
include = ["aegis*"]
